--- a/index.html
+++ b/index.html
@@ -45,6 +45,22 @@
 
     <!-- style CSS -->
     <link rel="stylesheet" href="css/style.css">
+
+	
+<!-- chatbot link -->
+<script>
+	window.embeddedChatbotConfig = {
+	chatbotId: "DBOQ7GxNlNaKjL75_X-l9",
+	domain: "www.chatbase.co"
+	}
+	</script>
+	<script
+	src="https://www.chatbase.co/embed.min.js"
+	chatbotId="DBOQ7GxNlNaKjL75_X-l9"
+	domain="www.chatbase.co"
+	defer>
+</script>
+
 </head>
 
 <body>
