--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
     </section>
     <!--::Browse all categories of our service part end::-->
 
-  <!-- ================ contact section start ================= -->
+  <!-- ================ contact section start ================= 
   <section class="contact-section section_padding">
         <div class="container">
           <div class="row">
@@ -365,7 +365,7 @@
         </div>
         <img src="img/animate_icon/Ellipse_5.png" alt="" class="feature_icon_2 custom-animation2">
       </section>
-      <!-- ================ contact section end ================= -->
+       ================ contact section end ================= -->
 
     <!--::footer_part start::-->
     <footer class="footer_part">
